[package]
name = "todo-har-exporter"
version = "0.1.0"
description = "Export tasklist from captured Microsoft to-do traffic."
license = "GPL-3.0-or-later"
authors = ["aplqo <aplqo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4.0"
